--- a/Mars_part1.ipynb
+++ b/Mars_part1.ipynb
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as soup"
+    "from bs4 import BeautifulSoup as soup\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,26 +62,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "response = requests.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "soup = soup(response.text, 'html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Store the Results\n",
+    "\n",
+    "Extract the titles and preview text of the news articles that you scraped. Store the scraping results in Python data structures as follows:\n",
+    "\n",
+    "* Store each title-and-preview pair in a Python dictionary. And, give each dictionary two keys: `title` and `preview`. An example is the following:\n",
+    "\n",
+    "  ```python\n",
+    "  {'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\", \n",
+    "   'preview': \"For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.\"\n",
+    "  }\n",
+    "  ```\n",
+    "\n",
+    "* Store all the dictionaries in a Python list.\n",
+    "\n",
+    "* Print the list in your notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty list to store the dictionaries\n",
+    "scraped_data = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
+       "  'preview': 'For the first time in its eight years orbiting Mars, NASAâ\\x80\\x99s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
+       " {'title': \"NASA Prepares to Say 'Farewell' to InSight Spacecraft\",\n",
+       "  'preview': 'A closer look at what goes into wrapping up the mission as the spacecraftâ\\x80\\x99s power supply continues to dwindle.'},\n",
+       " {'title': 'NASA and ESA Agree on Next Steps to Return Mars Samples to Earth',\n",
+       "  'preview': 'The agencyâ\\x80\\x99s Perseverance rover will establish the first sample depot on Mars.'},\n",
+       " {'title': \"NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars\",\n",
+       "  'preview': 'The agencyâ\\x80\\x99s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.'},\n",
+       " {'title': 'NASA To Host Briefing on InSight, Mars Reconnaissance Orbiter Findings',\n",
+       "  'preview': 'Scientists from two Mars missions will discuss how they combined images and data for a major finding on the Red Planet.'},\n",
+       " {'title': 'Why NASA Is Trying To Crash Land on Mars',\n",
+       "  'preview': 'Like a carâ\\x80\\x99s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.'},\n",
+       " {'title': 'Curiosity Mars Rover Reaches Long-Awaited Salty Region',\n",
+       "  'preview': 'After years of climbing, the Mars rover has arrived at a special region believed to have formed as Marsâ\\x80\\x99 climate was drying.'},\n",
+       " {'title': 'Mars Mission Shields Up for Tests',\n",
+       "  'preview': 'Protecting Mars Sample Return spacecraft from micrometeorites requires high-caliber work.'},\n",
+       " {'title': \"NASA's InSight Waits Out Dust Storm\",\n",
+       "  'preview': 'InSightâ\\x80\\x99s team is taking steps to help the solar-powered lander continue operating for as long as possible.'},\n",
+       " {'title': \"NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars\",\n",
+       "  'preview': 'The Mars landerâ\\x80\\x99s seismometer has picked up vibrations from four separate impacts in the past two years.'},\n",
+       " {'title': \"NASA's Perseverance Rover Investigates Geologically Rich Mars Terrain\",\n",
+       "  'preview': 'The latest findings provide greater detail on a region of the Red Planet that has a watery past and is yielding promising samples for the NASA-ESA Mars Sample Return campaign.'},\n",
+       " {'title': 'NASA to Host Briefing on Perseverance Mars Rover Mission Operations',\n",
+       "  'preview': 'Members of the mission will discuss the roverâ\\x80\\x99s activities as it gathers samples in an ancient river delta.'},\n",
+       " {'title': \"NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater\",\n",
+       "  'preview': 'The rover found that Jezero Craterâ\\x80\\x99s floor is made up of volcanic rocks that have interacted with water.'},\n",
+       " {'title': \"10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive\",\n",
+       "  'preview': 'Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.'},\n",
+       " {'title': \"SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars\",\n",
+       "  'preview': 'â\\x80\\x9cSelfieâ\\x80\\x9d of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Store each title and preview pair in a dictionary\n",
+    "\n",
+    "list_texts = soup.find_all(class_= 'list_text')\n",
+    "\n",
+    "# Loop through the text elements\n",
+    "for lt in list_texts:\n",
+    "    # Extract the title and preview text from the elements\n",
+    "    title_element = lt.find(class_= 'content_title')\n",
+    "    preview_element = lt.find(class_ = 'article_teaser_body')\n",
+    "    \n",
+    "    # Store each title and preview pair in a dictionary\n",
+    "    if title_element and preview_element:\n",
+    "        entry = {\n",
+    "            'title': title_element.get_text(),\n",
+    "            'preview': preview_element.get_text()\n",
+    "        }\n",
+    "        # Add the dictionary to the list\n",
+    "        scraped_data.append(entry)\n",
+    "\n",
+    "scraped_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
