--- a/Mars_part1.ipynb
+++ b/Mars_part1.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "import requests"
+    "import requests\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "  'preview': 'â\\x80\\x9cSelfieâ\\x80\\x9d of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
     "# Loop through the text elements\n",
     "for lt in list_texts:\n",
     "    # Extract the title and preview text from the elements\n",
-    "    title_element = lt.find(class_= 'content_title')\n",
+    "    title_element = lt.find(class_ = 'content_title')\n",
     "    preview_element = lt.find(class_ = 'article_teaser_body')\n",
     "    \n",
     "    # Store each title and preview pair in a dictionary\n",
@@ -181,11 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(scraped_data)\n",
+    "df.to_csv('output_files/mars_news_previews.csv')"
    ]
   }
  ],
